# set_daily

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: deploy.yml
src/: main.rs  state.rs
web/: index.html
