[package]
name = "set_daily"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  # ui without default_platform
  "default_app",
  "ui_api",
  "ui_bevy_render",
  "scene",
  "picking",
  "bevy_ui_widgets",
  # default_platform without std, bevy_gilrs, bevy_clipboard, multi_threaded
  "bevy_winit",
  "default_font",
  "webgl2",
  "x11",
  "wayland",
  "custom_cursor",
  "sysinfo_plugin",
  ] }
rand = { version = "0.10.1", default-features = false }
rand_pcg = "0.10.2"
