[package]
name = "set_daily"
version = "0.1.0"
edition = "2024"

[features]
debug = ["bevy/debug"]

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  # ui without default_platform
  "default_app",
  "ui_api",
  "ui_bevy_render",
  "scene",
  "picking",
  "bevy_ui_widgets",
  # default_platform without bevy_gilrs, bevy_clipboard, multi_threaded
  "std",
  "bevy_winit",
  "default_font",
  "webgl2",
  "x11",
  "wayland",
  "custom_cursor",
  "sysinfo_plugin",
  ] }
bytemuck = "1.25.0"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock", "wasmbind"] }
chrono-tz = { version = "0.10.4", default-features = false, features = ["std"] }
rand = { version = "0.10.1", default-features = false }
rand_pcg = { version = "0.10.2", default-features = false }
